# simforge

./: .gitignore  pyproject.toml  requirements.txt
configs/: dr_aggressive.yaml  dr_moderate.yaml  dr_off.yaml  eval_ood.yaml  ppo_pick_place.yaml  train_pick_place.yaml  train_reach.yaml
docs/: phase1a_explainer.html
scripts/: 01_train_reach.py  02_train_pick_place.py  03_ablation.py  04_compare_algos.py  05_record_demo.py  06_eval_ood.py
src/simforge/: __init__.py
src/simforge/dr/: __init__.py  config.py  params.py  randomizer.py
src/simforge/envs/: __init__.py  wrappers.py
src/simforge/evaluation/: evaluate.py  plotting.py
src/simforge/training/: callbacks.py  train.py
src/simforge/utils/: helpers.py
tests/: test_dr_wrapper.py  test_env_creation.py
