[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "simforge"
version = "0.1.0"
description = "Robotics RL with domain randomization: pick-and-place in MuJoCo"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mujoco>=3.1.0,<4.0",
    "gymnasium>=1.0.0,<2.0",
    "gymnasium-robotics>=1.4.0,<2.0",
    "stable-baselines3>=2.7.0,<3.0",
    "sb3-contrib>=2.7.0,<3.0",
    "wandb>=0.19.0",
    "numpy>=1.26.0,<2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.1",
    "tensorboard>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
